# insight

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  MODEL_SHARING_FIX.md  OOM_FIX.md  QUICKSTART.md  README.md  app.py  app_old.py  docker-compose.yml  example_workflow.py  future_plans.md  image_to_embedding.py  main.py  pyproject.toml  search_images.py  search_videos.py  test_video_search.py  video_to_embedding.py
frontend/: Dockerfile  GETTING_STARTED.md  index.html  nginx.conf  package-lock.json  package.json  start.sh  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/services/: api.js
server/: Readme.md  server.py
server/routers/: controls.py  search.py
server/services/embedings/: main.py
server/services/fileDB/: main.py
server/services/prefilter/: main.py
server/services/vectorDB/: main.py
video_embeddings/: __init__.py  cluster.py  embedding.py  ingest.py  mean_pool.py  orchestrator.py  orchestrator_old.py  vector_db.py
